# g-pfl-ids

./: .gitignore  README.md  personalize_evaluate.txt  pyproject.toml
src/: __init__.py  client_app.py  config.py  evaluator.py  personalize.py  personalized_evaluator.py  server_app.py
src/evaluation/: malicious_evaluator.py
src/models/: __init__.py  base.py  gae.py  gcn.py
src/training/: __init__.py  losses.py  trainers.py
src/utils/: __init__.py  data_processing.py  oneclass_metrics.py  utils.py
